--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -19,6 +19,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           repository: Serious-senpai/genetic-algorithm
+          ref: "priority-split-compare"
           token: ${{ secrets.PAT }}
           submodules: recursive
 
@@ -39,6 +40,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           repository: Serious-senpai/genetic-algorithm
+          ref: "priority-split-compare"
           token: ${{ secrets.PAT }}
 
       - name: Setup Python
@@ -59,6 +61,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           repository: Serious-senpai/genetic-algorithm
+          ref: "priority-split-compare"
           token: ${{ secrets.PAT }}
   
       - name: Setup Python
@@ -79,6 +82,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           repository: Serious-senpai/genetic-algorithm
+          ref: "priority-split-compare"
           token: ${{ secrets.PAT }}
   
       - name: Setup Python
@@ -99,6 +103,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           repository: Serious-senpai/genetic-algorithm
+          ref: "priority-split-compare"
           token: ${{ secrets.PAT }}
 
       - name: Setup Python
