--- a/.github/workflows/solve-vrpdfd.yml
+++ b/.github/workflows/solve-vrpdfd.yml
@@ -30,6 +30,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           repository: Serious-senpai/genetic-algorithm
+          ref: "priority-split-compare"
           token: ${{ secrets.PAT }}
           submodules: recursive
 
@@ -95,6 +96,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           repository: Serious-senpai/genetic-algorithm
+          ref: "priority-split-compare"
           token: ${{ secrets.PAT }}
           submodules: recursive
 
