--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -19,6 +19,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           repository: Serious-senpai/genetic-algorithm
+          ref: "priority-split-compare"
           token: ${{ secrets.PAT }}
           submodules: recursive
 
