--- a/.github/workflows/solve-vrpdfd.yml
+++ b/.github/workflows/solve-vrpdfd.yml
@@ -125,4 +125,6 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: summary
-          path: vrpdfd-summary/vrpdfd-summary.csv
+          path: |
+            vrpdfd-summary/output-*.json
+            vrpdfd-summary/vrpdfd-summary.csv
