--- a/.github/workflows/solve-vrpdfd.yml
+++ b/.github/workflows/solve-vrpdfd.yml
@@ -33,7 +33,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           repository: Serious-senpai/genetic-algorithm
-          ref: "main"
+          ref: "priority-split-compare"
           token: ${{ secrets.PAT }}
           submodules: recursive
 
@@ -99,7 +99,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           repository: Serious-senpai/genetic-algorithm
-          ref: "main"
+          ref: "priority-split-compare"
           token: ${{ secrets.PAT }}
           submodules: recursive
 
