--- a/.github/workflows/solve-vrpdfd.yml
+++ b/.github/workflows/solve-vrpdfd.yml
@@ -24,6 +24,7 @@ jobs:
           "100.10.1", "100.10.2", "100.10.3", "100.10.4", "100.20.1", "100.20.2", "100.20.3", "100.20.4", "100.30.1", "100.30.2", "100.30.3", "100.30.4", "100.40.1", "100.40.2", "100.40.3", "100.40.4",
           "150.10.1", "150.10.2", "150.10.3", "150.10.4", "150.20.1", "150.20.2", "150.20.3", "150.20.4", "150.30.1", "150.30.2", "150.30.3", "150.30.4", "150.40.1", "150.40.2", "150.40.3", "150.40.4",
           "200.10.1", "200.10.2", "200.10.3", "200.10.4", "200.20.1", "200.20.2", "200.20.3", "200.20.4", "200.30.1", "200.30.2", "200.30.3", "200.30.4", "200.40.1", "200.40.2", "200.40.3", "200.40.4"]
+        loop: [0, 1]
 
     steps:
       - name: Checkout repository
@@ -49,7 +50,7 @@ jobs:
           set +e
           for i in $(seq 0 4)
           do
-            echo "---------- RUN #$i ----------"
+            echo "---------- RUN #$((5 * ${{ matrix.loop }} + i)) ----------"
 
             timeout --preserve-status --signal=INT 3000 \
             python vrpdfd.py ${{ matrix.problem }} \
